--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/post.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/post.scss
@@ -33,6 +33,10 @@
     }
 
     &__input-area {
+        textarea {
+            position: relative;
+        }
+
         .tags {
             display: flex;
             justify-content: start;
