Fix OAuth 2.0 Code flow errors
Fix OAuth 2.0 Code flow errors

--- a/src/Identity/CombatAnalysisIdentity/Pages/Login.cshtml
+++ b/src/Identity/CombatAnalysisIdentity/Pages/Login.cshtml
@@ -2,7 +2,7 @@
 @model LoginModel
 
 <form method="post">
-    <input type="text" name="returnUrl" value=@Request.Query["redirect_uri"] hidden />
+    <input type="text" name="returnUrl" value=@Request.Query["redirectUri"] hidden />
     <input type="text" name="username" />
     <input type="password" name="password" />
     <input type="submit" value="Отправить" />
