--- a/src/Identity/CombatAnalysisIdentity/Pages/Authorization.cshtml
+++ b/src/Identity/CombatAnalysisIdentity/Pages/Authorization.cshtml
@@ -1,11 +1,17 @@
 ﻿@page
 @model AuthorizationModel
 
-<form method="post">
-    <input type="text" name="returnUrl" hidden="true" value=@Request.Query["redirectUri"] />
-    <label htmlFor="inputEmail" className="form-label">Email</label>
-    <input type="email" id="inputEmail" name="email" />
-    <label htmlFor="inputPassword" className="form-label">Password</label>
-    <input type="password" id="inputPassword" name="password" />
-    <input type="submit" value="Отправить" />
-</form>
+@if (Model.QueryIsValid)
+{
+    <form method="post">
+        <label htmlFor="inputEmail" className="form-label">Email</label>
+        <input type="email" id="inputEmail" name="email" />
+        <label htmlFor="inputPassword" className="form-label">Password</label>
+        <input type="password" id="inputPassword" name="password" />
+        <input type="submit" value="Отправить" />
+    </form>
+}
+else
+{
+    <div>Request is incorrect.</div>
+}
