--- a/src/Identity/CombatAnalysisIdentity/Pages/Authorization.cshtml
+++ b/src/Identity/CombatAnalysisIdentity/Pages/Authorization.cshtml
@@ -1,15 +1,25 @@
 ﻿@page
 @model AuthorizationModel
+@RenderMode.ServerPrerendered
 
-@if (Model.QueryIsValid)
+@if (!Model.QueryIsValid)
 {
-    <form method="post">
-        <label htmlFor="inputEmail" className="form-label">Email</label>
-        <input type="email" id="inputEmail" name="email" />
-        <label htmlFor="inputPassword" className="form-label">Password</label>
-        <input type="password" id="inputPassword" name="password" />
-        <input type="submit" value="Отправить" />
-    </form>
+    <div class="login">
+        <div class="login__title">Login</div>
+        <div class="login__container">
+            <form class="login__submit">
+                <div class="mb-3">
+                    <label for="inputEmail" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="inputEmail" name="email" aria-describedby="emailHelp" required />
+                </div>
+                <div class="mb-3">
+                    <label for="inputPassword" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="inputPassword" name="password" autoComplete="new-password" required />
+                </div>
+                <input type="submit" class="btn-border-shadow finish-login" value=Login />
+            </form>
+        </div>
+    </div>
 }
 else
 {
