--- a/src/Identity/CombatAnalysisIdentity/wwwroot/scss/site.scss
+++ b/src/Identity/CombatAnalysisIdentity/wwwroot/scss/site.scss
@@ -39,13 +39,8 @@
 .registration {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 20px;
-
-    &__container {
-        display: flex;
-        justify-content: start;
-        gap: 50px;
-    }
 
     &__title {
         margin-left: 50px;
@@ -54,7 +49,14 @@
     }
 
     &__submit {
-        width: 300px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 1000px;
+
+        .confidential, .general {
+            width: 300px;
+        }
 
         &__error-message {
             margin: 15px;
@@ -65,6 +67,7 @@
 
         .actions {
             display: flex;
+            justify-content: center;
             gap: 25px;
             margin: 15px 0;
 
@@ -76,6 +79,12 @@
         .finish-registration {
             box-shadow: 2px 2px 2px 2px green;
         }
+    }
+
+    &__container {
+        display: flex;
+        justify-content: center;
+        gap: 50px;
     }
 }
 
