--- a/src/Identity/CombatAnalysisIdentity/wwwroot/css/site.css
+++ b/src/Identity/CombatAnalysisIdentity/wwwroot/css/site.css
@@ -29,6 +29,10 @@
 .login__submit .finish-login {
   box-shadow: 2px 2px 2px 2px green;
 }
+.login .actions {
+  display: flex;
+  justify-content: center;
+}
 
 .registration {
   display: flex;
