--- a/src/Identity/CombatAnalysisIdentity/Pages/Registration.cshtml
+++ b/src/Identity/CombatAnalysisIdentity/Pages/Registration.cshtml
@@ -63,4 +63,13 @@
             <input type="submit" class="btn-border-shadow finish-registration" value="Registration" />
         </div>
     </form>
+    <input type="button" class="btn-border-shadow finish-registration" onclick="goToLogin()" value="Login" />
 </div>
+
+<script>
+    function goToLogin() {
+        var queryparams = window.location.search;
+
+        window.location.href = `https://localhost:7064/authorization${queryparams}`;
+    }
+</script>
