--- a/src/Identity/CombatAnalysisIdentity/wwwroot/scss/site.scss
+++ b/src/Identity/CombatAnalysisIdentity/wwwroot/scss/site.scss
@@ -34,6 +34,11 @@
             box-shadow: 2px 2px 2px 2px green;
         }
     }
+
+    .actions {
+        display: flex;
+        justify-content: center;
+    }
 }
 
 .registration {
