--- a/src/Identity/CombatAnalysisIdentity/wwwroot/scss/site.scss
+++ b/src/Identity/CombatAnalysisIdentity/wwwroot/scss/site.scss
@@ -1,11 +1,77 @@
-.login {
+body {
+    color: white;
+}
+
+#root {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    background: #0c192c;
+    height: 100vh;
+    width: 100vw;
+    z-index: -1;
+}
+
+header {
+    display: flex;
+    justify-content: center;
+    color: white;
+    margin: 30px;
+    font-size: 22px;
+    font-family: 'Comic Sans MS';
+}
+
+input, label {
+    color: white;
+}
+
+.request-incorrect {
+    display: flex;
+    justify-content: center;
+    margin: 50px 0;
+    font-size: 18px;
+    animation: incorrect 3s linear infinite;
+}
+
+@keyframes incorrect {
+    0% {
+        color: white;
+    }
+    50% {
+        color: brown;
+    }
+    100% {
+        color: white;
+    }
+}
+
+.login, .registration {
+    position: absolute;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    right: 40%;
+    top: 20%;
+    color: white;
+
+    &__cancel {
+        display: flex;
+        justify-content: space-between;
+        margin: 10px 0;
+        width: 250px;
+
+        .cancel {
+            font-size: 11px;
+            box-shadow: 2px 2px 2px 2px gray;
+        }
+    }
+}
+
+.login {
+    right: 40%;
 
     &__title {
-        margin-left: 50px;
         font-size: 18px;
         font-weight: bold;
     }
@@ -42,10 +108,7 @@
 }
 
 .registration {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
+    right: 20%;
 
     &__title {
         margin-left: 50px;
@@ -75,10 +138,6 @@
             justify-content: center;
             gap: 25px;
             margin: 15px 0;
-
-            input {
-                color: black;
-            }
         }
 
         .finish-registration {
