--- a/src/Identity/CombatAnalysisIdentity/Pages/Registration.cshtml
+++ b/src/Identity/CombatAnalysisIdentity/Pages/Registration.cshtml
@@ -1,75 +1,95 @@
 ﻿@page
 @model CombatAnalysisIdentity.Pages.RegistrationModel
 
-<div class="registration">
-    <div class="registration__title">Registration</div>
-    <form class="registration__submit" method="post">
-        <div class="registration__container">
-            <div class="confidential">
-                <div class="mb-3">
-                    <label for="input-email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="input-email" name="email" aria-describedby="emailHelp" required />
+@if (Model.QueryIsValid)
+{
+    <div class="registration">
+        <div class="registration__title">Registration</div>
+        <form class="registration__submit" method="post">
+            <div class="registration__container">
+                <div class="confidential">
+                    <div class="mb-3">
+                        <label for="input-email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="input-email" name="email" aria-describedby="emailHelp" required />
+                    </div>
+                    <div class="mb-3">
+                        <label for="inputUsername" class="form-label">Username</label>
+                        <input type="text" class="form-control" id="inputUsername" name="username" required />
+                    </div>
+                    <div class="mb-3">
+                        <label for="new-password" class="form-label">Password</label>
+                        <input class="form-control" id="new-password" type="password" name="password" autoComplete="new-password" required />
+                    </div>
+                    <div class="mb-3">
+                        <label for="confirm-password" class="form-label">Confirm password</label>
+                        <input class="form-control" id="confirm-password" type="password" name="confirmPassword" autoComplete="new-password" required />
+                    </div>
                 </div>
-                <div class="mb-3">
-                    <label for="inputUsername" class="form-label">Username</label>
-                    <input type="text" class="form-control" id="inputUsername" name="username" required />
-                </div>
-                <div class="mb-3">
-                    <label for="new-password" class="form-label">Password</label>
-                    <input class="form-control" id="new-password" type="password" name="password" autoComplete="new-password" required />
-                </div>
-                <div class="mb-3">
-                    <label for="confirm-password" class="form-label">Confirm password</label>
-                    <input class="form-control" id="confirm-password" type="password" name="confirmPassword" autoComplete="new-password" required />
-                </div>
-            </div>
-            <div class="general">
-                <div class="mb-3">
-                    <label for="inputFirstName" class="form-label">First name</label>
-                    <input type="text" class="form-control" id="inputFirstName" name="firstName" aria-describedby="emailHelp" required />
-                </div>
-                <div class="mb-3">
-                    <label for="inputLastName" class="form-label">Last name</label>
-                    <input type="text" class="form-control" id="inputLastName" name="lastName" required />
-                </div>
-                <div class="mb-3">
-                    <label for="input-phone-number" class="form-label">Phone number</label>
-                    <input type="number" class="form-control" id="input-phone-number" name="phoneNumber" required />
-                </div>
-                <div class="mb-3">
-                    <label for="input-birthday" class="form-label">Birthday</label>
-                    <input type="date" class="form-control" id="input-birthday" name="birthday" required />
-                </div>
+                <div class="general">
+                    <div class="mb-3">
+                        <label for="inputFirstName" class="form-label">First name</label>
+                        <input type="text" class="form-control" id="inputFirstName" name="firstName" aria-describedby="emailHelp" required />
+                    </div>
+                    <div class="mb-3">
+                        <label for="inputLastName" class="form-label">Last name</label>
+                        <input type="text" class="form-control" id="inputLastName" name="lastName" required />
+                    </div>
+                    <div class="mb-3">
+                        <label for="input-phone-number" class="form-label">Phone number</label>
+                        <input type="number" class="form-control" id="input-phone-number" name="phoneNumber" required />
+                    </div>
+                    <div class="mb-3">
+                        <label for="input-birthday" class="form-label">Birthday</label>
+                        <input type="date" class="form-control" id="input-birthday" name="birthday" required />
+                    </div>
 
-            </div>
-            <div class="general">
-                <div class="mb-3">
-                    <label for="textareaAboutMe" class="form-label">About me</label>
-                    <textarea class="form-control" id="textareaAboutMe" name="aboutMe" rows="4"></textarea>
                 </div>
-                <div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="man" value="0" checked />
-                        <label class="form-check-label" for="man">Man</label>
+                <div class="general">
+                    <div class="mb-3">
+                        <label for="textareaAboutMe" class="form-label">About me</label>
+                        <textarea class="form-control" id="textareaAboutMe" name="aboutMe" rows="4"></textarea>
                     </div>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="woman" value="1" />
-                        <label class="form-check-label" for="woman">Woman</label>
+                    <div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="man" value="0" checked />
+                            <label class="form-check-label" for="man">Man</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="woman" value="1" />
+                            <label class="form-check-label" for="woman">Woman</label>
+                        </div>
                     </div>
                 </div>
             </div>
+            <div class="actions">
+                <input type="submit" class="btn-border-shadow finish-registration" value="Registration" />
+            </div>
+        </form>
+        <div class="registration__cancel">
+            <input type="button" class="btn-border-shadow" onclick="goToLogin()" value="Login" />
+            <input type="button" class="btn-border-shadow cancel" onclick="goToHome()" value="Cancel" />
         </div>
-        <div class="actions">
-            <input type="submit" class="btn-border-shadow finish-registration" value="Registration" />
-        </div>
-    </form>
-    <input type="button" class="btn-border-shadow finish-registration" onclick="goToLogin()" value="Login" />
-</div>
+    </div>
+}
+else
+{
+    <div class="request-incorrect">
+        <div>Request is incorrect. Pls try one more time</div>
+    </div>
+}
 
 <script>
     function goToLogin() {
-        var queryparams = window.location.search;
+        const queryparams = window.location.search;
 
         window.location.href = `https://localhost:7064/authorization${queryparams}`;
+    }
+
+    function goToHome() {
+        const queryString = window.location.search;
+        const queryparams = new URLSearchParams(queryString);
+        const redirectUri = queryparams.get("redirectUri");
+
+        window.location.href = redirectUri;
     }
 </script>
