--- a/src/Identity/CombatAnalysisIdentity/Pages/Shared/_Layout.cshtml
+++ b/src/Identity/CombatAnalysisIdentity/Pages/Shared/_Layout.cshtml
@@ -11,15 +11,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Combat Analysis Identity</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
-        </nav>
+        <div class="header">Combat logs Identity</div>
     </header>
     <div class="container">
         <div id="root"></div>
