--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/create.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/create.scss
@@ -117,6 +117,12 @@
                 color: green;
             }
         }
+
+        .form-group {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
     }
 
     .rules {
