--- a/src/Identity/CombatAnalysisIdentity/Pages/Authorization.cshtml
+++ b/src/Identity/CombatAnalysisIdentity/Pages/Authorization.cshtml
@@ -37,7 +37,7 @@ else
     function goToRegistration() {
         const queryString = window.location.search;
 
-        window.location.href = `https://localhost:7064/registration${queryString}`;
+        window.location.href = `https://solinx.analysis.identity/registration${queryString}`;
     }
 
     function goToHome() {
