--- a/src/Identity/CombatAnalysisIdentity/Pages/Registration.cshtml
+++ b/src/Identity/CombatAnalysisIdentity/Pages/Registration.cshtml
@@ -9,45 +9,36 @@
             <div class="registration__container">
                 <div class="confidential">
                     <div class="mb-3">
-                        <label for="input-email" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="input-email" name="email" aria-describedby="emailHelp" required />
+                        <input type="email" class="form-control" id="input-email" name="email" aria-describedby="emailHelp" placeholder="Email" required />
                     </div>
                     <div class="mb-3">
-                        <label for="inputUsername" class="form-label">Username</label>
-                        <input type="text" class="form-control" id="inputUsername" name="username" required />
+                        <input type="text" class="form-control" id="inputUsername" name="username" placeholder="Username" required />
                     </div>
                     <div class="mb-3">
-                        <label for="new-password" class="form-label">Password</label>
-                        <input class="form-control" id="new-password" type="password" name="password" autoComplete="new-password" required />
+                        <input class="form-control" id="new-password" type="password" name="password" autoComplete="new-password" placeholder="Password" required />
                     </div>
                     <div class="mb-3">
-                        <label for="confirm-password" class="form-label">Confirm password</label>
-                        <input class="form-control" id="confirm-password" type="password" name="confirmPassword" autoComplete="new-password" required />
+                        <input class="form-control" id="confirm-password" type="password" name="confirmPassword" autoComplete="new-password" placeholder="Confirm password" required />
                     </div>
                 </div>
                 <div class="general">
-                    <div class="mb-3">
-                        <label for="inputFirstName" class="form-label">First name</label>
-                        <input type="text" class="form-control" id="inputFirstName" name="firstName" aria-describedby="emailHelp" required />
-                    </div>
-                    <div class="mb-3">
-                        <label for="inputLastName" class="form-label">Last name</label>
-                        <input type="text" class="form-control" id="inputLastName" name="lastName" required />
-                    </div>
-                    <div class="mb-3">
-                        <label for="input-phone-number" class="form-label">Phone number</label>
-                        <input type="number" class="form-control" id="input-phone-number" name="phoneNumber" required />
-                    </div>
                     <div class="mb-3">
                         <label for="input-birthday" class="form-label">Birthday</label>
                         <input type="date" class="form-control" id="input-birthday" name="birthday" required />
                     </div>
-
+                    <div class="mb-3">
+                        <input type="text" class="form-control" id="inputFirstName" name="firstName" aria-describedby="emailHelp" placeholder="First name" required />
+                    </div>
+                    <div class="mb-3">
+                        <input type="text" class="form-control" id="inputLastName" name="lastName" placeholder="Last name" required />
+                    </div>
+                    <div class="mb-3">
+                        <input type="number" class="form-control" id="input-phone-number" name="phoneNumber" placeholder="Phone number" required />
+                    </div>
                 </div>
                 <div class="general">
                     <div class="mb-3">
-                        <label for="textareaAboutMe" class="form-label">About me</label>
-                        <textarea class="form-control" id="textareaAboutMe" name="aboutMe" rows="4"></textarea>
+                        <textarea class="form-control" id="textareaAboutMe" name="aboutMe" rows="4" placeholder="About me"></textarea>
                     </div>
                     <div>
                         <div class="form-check form-check-inline">
@@ -62,7 +53,7 @@
                 </div>
             </div>
             <div class="actions">
-                <input type="submit" class="btn-border-shadow finish-registration" value="Registration" />
+                <input type="submit" class="btn-border-shadow finish-registration" value="Sign up" />
             </div>
         </form>
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
