Add grantType verification
Add grantType verification

--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/navMenu.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/navMenu.scss
@@ -34,7 +34,7 @@ html {
         li {
             padding: 5px 10px;
             border-radius: 10px;
-            box-shadow: 2px 2px 2px 2px #5BBCFF;
+            border: 1px solid white;
             font-size: 14px;
             cursor: pointer;
         }
