Hide Voice char
Hide Voice char

--- a/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/voice.scss
+++ b/src/CombatAnalysis.WebApp/ClientApp/src/styles/communication/chats/voice.scss
@@ -28,7 +28,7 @@
                     top: 7%;
                     padding: 10px;
                     border: 1px solid gray;
-                    background: white;
+                    background: black;
                 }
 
                 &__screen, &__camera, &__microphone {
